# LMCAS_LLVM_Debloating_Passes

./: .gitignore  CMakeLists.txt  README.md
Debloat/: CMakeLists.txt  CleaningUpStuff.h  Debloat.cpp  GlobalVariables.cpp  GlobalVariables.h  LocalVariables.cpp  LocalVariables.h  Makefile  Predicates.h  Utility.cpp  Utility.h
Debloat/include/: CleaningUpStuff.h  GlobalVariables.h  LocalVariables.h  Predicates.h  Utility.h
Debloat/src/: CleaningUpStuff.cpp  Debloat.cpp  GlobalVariables.cpp  LocalVariables.cpp  PostNeckConstConversion.cpp  Predicates.cpp  Utility.cpp
Profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h
